# r2_robotic_arm_ros2

./: README.md
r1_robotic_arm_bringup/: CMakeLists.txt  package.xml
r1_robotic_arm_bringup/config/: r1_robotic_arm_controllers.yaml
r1_robotic_arm_bringup/launch/: r1_robotic_arm.launch.py
r1_robotic_arm_bringup/rviz/: r1_robotic_arm.rviz
r2_interfaces/: CMakeLists.txt  package.xml
r2_interfaces/srv/: GetTarget.srv
r2_robotic_arm_can/: CMakeLists.txt  R2RoboticArmCANConfig.cmake.in  README.md  package.xml  r2_robotic_arm-can.pc.in
r2_robotic_arm_can/examples/: demo.cpp
r2_robotic_arm_can/include/r2_robotic_arm/can/socket/: arm_component.hpp  r2_robotic_arm.hpp
r2_robotic_arm_can/include/r2_robotic_arm/canbus/: can_device.hpp  can_device_collection.hpp  can_socket.hpp
r2_robotic_arm_can/include/r2_robotic_arm/damiao_motor/: dm_motor.hpp  dm_motor_constants.hpp  dm_motor_control.hpp  dm_motor_device.hpp  dm_motor_device_collection.hpp
r2_robotic_arm_can/setup/: motor_check.cpp  r2_robotic_arm-can-change-baudrate  r2_robotic_arm-can-zero-position-calibration  r2_robotic_arm_can_diagnosis.cpp
r2_robotic_arm_can/src/r2_robotic_arm/can/socket/: arm_component.cpp  r2_robotic_arm.cpp
r2_robotic_arm_can/src/r2_robotic_arm/canbus/: can_device_collection.cpp  can_socket.cpp
r2_robotic_arm_can/src/r2_robotic_arm/damiao_motor/: dm_motor.cpp  dm_motor_control.cpp  dm_motor_device.cpp  dm_motor_device_collection.cpp
r2_robotic_arm_description/: CMakeLists.txt  package.xml
r2_robotic_arm_description/config/: ros2_controllers.yaml
r2_robotic_arm_description/launch/: display.launch.py
r2_robotic_arm_description/meshes/: base_link.STL  camera.STL  joint_2_link.STL  joint_3_link.STL  joint_5_link.STL  suction.STL
r2_robotic_arm_description/rviz/: r2_robotic_arm.rviz
r2_robotic_arm_description/urdf/: r2_robotic_arm.csv  r2_robotic_arm.urdf  r2_robotic_arm.urdf.xacro  r2_robotic_arm_base.urdf.xacro
r2_robotic_arm_hardware/: CMakeLists.txt  package.xml  r2_robotic_arm_hardware.xml
r2_robotic_arm_hardware/include/r2_robotic_arm_hardware/: r2_robotic_arm_hardware_interface.hpp
r2_robotic_arm_hardware/src/: r2_robotic_arm_hardware_interface.cpp
r2_robotic_arm_moveit_config/: CMakeLists.txt  package.xml
r2_robotic_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  r2_robotic_arm.ros2_control.xacro  r2_robotic_arm.srdf  ros2_controllers.yaml
r2_robotic_arm_moveit_config/launch/: bringup.launch.py  bringup_hw.launch.py  bringup_sim.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
r2_robotic_arm_moveit_config/scripts/: r2_goal_test.py
rc_kfs/: package.xml  setup.cfg  setup.py
rc_kfs/r2_kfs/: main_mal_3D.py
scripts/: r2_goal_test.py
trac_ik/trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp
